force-app/main/default/objects/QB_Payment_Transaction__c/QB_Payment_Transaction__c.object-meta.xml
<CustomObject>
    <description>Junction object (Transactions) between Invoices and Payments</description>
    <label>QB Payment Transaction</label>
    <nameField>
        <label>Payment Transaction Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Payment Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>