force-app/main/default/objects/QB_Payment_Transaction__c/fields/QB_Invoice__c.field-meta.xml
<CustomField>
    <fullName>QB_Invoice__c</fullName>
    <label>QB Invoice</label>
    <referenceTo>QB_Invoice__c</referenceTo>
    <relationshipLabel>QB Payment Transactions</relationshipLabel>
    <relationshipName>QB_Payment_Transactions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>