force-app/main/default/objects/QB_Payment_Transaction__c/fields/QB_payment__c.field-meta.xml
<CustomField>
    <fullName>QB_payment__c</fullName>
    <label>QB payment</label>
    <referenceTo>QB_Payment__c</referenceTo>
    <relationshipLabel>QB Payment Transactions</relationshipLabel>
    <relationshipName>QB_Payment_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>