force-app/main/default/objects/QB_Payment_Transaction__c/fields/QB_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>QB_Payment_Date__c</fullName>
    <formula>QB_payment__r.QB_Payment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>