force-app/main/default/objects/QB_Payment_Transaction__c/fields/QB_Payment_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>QB_Payment_Reference_Number__c</fullName>
    <formula>QB_payment__r.QB_Reference_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Reference Number</label>
    <type>Text</type>
</CustomField>